# dotfiles

./: .gitignore  .stow-local-ignore  README.md  arch-pkgs.txt  blocks.sh  cargo-pkgs.txt  cargo.sh  config.fish  config.toml  dunstrc  enhancer_for_yt.txt  flake.nix  gitconfig  make.conf  picom.conf  pkgs.txt  power.sh  screenkey.json  setup.sh  starship.toml  sxhkdrc  void-pkgs.txt  wezterm.lua  xinitrc
Desktop/Unused/Rust/rs_dump/: Cargo.toml
Desktop/Unused/Rust/rs_dump/src/: main.rs
alacritty/: alacritty.yml
archive/: config.fish
aseprite/: aseprite.ini  user.aseprite-keys
aseprite/files/: -home-toxicfs-Downloads-button-png.ini  -home-toxicfs-Downloads-rightwok-aseprite.ini
bat/: config
dmenu/: config.def.h  config.h  dmenu
dmscripts/: config
dunst/: dunstrc
dwm/: Makefile  autostart.sh  config.def.h  dwm  dwm.c  sxhkdrc
dwm/dwmblocks/: blocks.def.h  dwmblocks
helix/: config.toml  languages.toml
home/: .bashrc  .gitconfig  .xinitrc
home-manager/: home.nix
home/.cargo/: config.toml
home/.config/: starship.toml
kitty/: kitty.conf  theme.conf
misc/: cargo.sh  shell.nix
new-dots/: flake.nix
new-dots/home-manager/: desktop.nix  home.nix  programs.nix
nixos/: configuration.nix  hardware-configuration.nix
nvchad-custom/: autocmds.lua  chadrc.lua  init.lua  lspconfig.lua
picom/: picom.conf
rofi/: config.rasi
scripts/: cargo.sh
shell/: .bashrc  config.fish
st/: Makefile  config.def.h  st
xmonad/: .xmobarrc  xmonad.hs
xorg/: .Xresources  .xinitrc
zsh/: .zcompdump  .zcompdump-void-5.8  .zsh_history  .zshrc
(+185 files in other folders)
